# curseradio

./: .gitignore  pyproject.toml
curseradio/: __init__.py  __main__.py  curseradio.py
